committing notebook examples of pythonic pandas

--- a/ds4a/ds4a/nyc-taxi.ipynb
+++ b/ds4a/ds4a/nyc-taxi.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 470,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'bigquery_storage_v1beta1' from 'google.cloud' (unknown location)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-470-aa9f90ae7c21>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcloud\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbigquery\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcloud\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mbigquery_storage_v1beta1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mbq_helper\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBigQueryHelper\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'bigquery_storage_v1beta1' from 'google.cloud' (unknown location)"
+     ]
+    }
+   ],
    "source": [
     "#from __future__ import absolute_import\n",
     "import pandas as pd\n",
@@ -17,11 +29,17 @@
     "\n",
     "import json \n",
     "\n",
+    "import google.auth\n",
     "from google.oauth2 import service_account\n",
-    "from google.cloud import bigquery\n",
+    "\n",
+    "from google.cloud import bigquery, bigquery_storage_v1beta1\n",
+    "\n",
     "from bq_helper import BigQueryHelper\n",
     "\n",
-    "from google.cloud.bigquery import magics"
+    "from google.cloud.bigquery import magics\n",
+    "%load_ext google.cloud.bigquery\n",
+    "\n",
+    "google.cloud.bigquery.magics.context.use_bqstorage_api = True\n"
    ]
   },
   {
@@ -47,6 +65,11 @@
     "Documentation here:\n",
     "https://cloud.google.com/bigquery/docs/authentication/service-account-file\n",
     "\n",
+    "Download large query results with \n",
+    "the BigQuery Storage API by adding the --use_bq_storage_api argument to the %%bigquery magics.\n",
+    "\n",
+    "https://cloud.google.com/bigquery/docs/bigquery-storage-python-pandas\n",
+    "\n",
     "'''"
    ]
   },
@@ -62,9 +85,19 @@
     "# Set key_path to the path to the service account key file.\n",
     "\n",
     "key_path = \"/Users/lorajohns/NYCTransit.json\"\n",
+    "\n",
     "service_account_info = json.load(open(key_path))\n",
     "credentials = service_account.Credentials.from_service_account_info(\n",
     "    service_account_info)\n",
+    "\n",
+    "credentials2, your_project_id = google.auth.default(\n",
+    "    scopes=[\"https://www.googleapis.com/auth/cloud-platform\"]\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Explicitly create a credentials object. This allows you to use the same\n",
+    "# credentials for both the BigQuery and BigQuery Storage clients, avoiding\n",
+    "# unnecessary API calls to fetch duplicate authentication tokens.\n",
     "\n",
     "#credentials = service_account.Credentials.from_service_account_file(\n",
     "#    key_path,\n",
@@ -73,15 +106,21 @@
     "\n",
     "project_id = 'nyc-transit-256016'\n",
     "\n",
+    "# Make clients.\n",
     "client = bigquery.Client(\n",
     "    credentials=credentials,\n",
-    "    project=credentials.project_id,\n",
+    "    #project=credentials.project_id,\n",
+    "    project=project_id,\n",
     ")\n",
-    " \n",
+    "\n",
+    "bqstorageclient = bigquery_storage_v1beta1.BigQueryStorageClient(\n",
+    "    credentials=credentials\n",
+    ")\n",
+    "\n",
     "#client = bigquery.Client(project=PROJECT_ID, location=\"US\")\n",
     "#dataset = client.create_dataset('example', exists_ok=True)\n",
     "\n",
-    "magics.context.project = project_id\n",
+    "# magics.context.project = project_id\n",
     "\n",
     "'''\n",
     "Create a reference to the training data table \n",
@@ -101,6 +140,65 @@
     "'''\n",
     "#%load_ext google.cloud.bigquery\n",
     "%reload_ext google.cloud.bigquery"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' \n",
+    "# Download query results.\n",
+    "Run a query by using the query method. \n",
+    "Call the to_dataframe method to wait for\n",
+    "the query to finish and download the results\n",
+    "by using the BigQuery Storage API.\n",
+    "\n",
+    "'''\n",
+    "query_string = \"\"\"\n",
+    "SELECT\n",
+    "CONCAT(\n",
+    "    'https://stackoverflow.com/questions/',\n",
+    "    CAST(id as STRING)) as url,\n",
+    "view_count\n",
+    "FROM `bigquery-public-data.stackoverflow.posts_questions`\n",
+    "WHERE tags like '%google-bigquery%'\n",
+    "ORDER BY view_count DESC\n",
+    "\"\"\"\n",
+    "\n",
+    "dataframe = (\n",
+    "    bqclient.query(query_string)\n",
+    "    .result()\n",
+    "    .to_dataframe(bqstorage_client=bqstorageclient)\n",
+    ")\n",
+    "print(dataframe.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'''Download all rows in a table by using the list_rows method, \n",
+    "which returns a RowIterator object. Download rows by using the BigQuery\n",
+    "Storage API by calling the to_dataframe method with the bqstorage_client argument.\n",
+    "'''\n",
+    "\n",
+    "# Download a table.\n",
+    "table = bigquery.TableReference.from_string(\n",
+    "    \"bigquery-public-data.utility_us.country_code_iso\"\n",
+    ")\n",
+    "rows = bqclient.list_rows(\n",
+    "    table,\n",
+    "    selected_fields=[\n",
+    "        bigquery.SchemaField(\"country_name\", \"STRING\"),\n",
+    "        bigquery.SchemaField(\"fips_code\", \"STRING\"),\n",
+    "    ],\n",
+    ")\n",
+    "dataframe = rows.to_dataframe(bqstorage_client=bqstorageclient)\n",
+    "print(dataframe.head())"
    ]
   },
   {
